fixed the styling for the about me section made the image and the text as a grid, and also fixedthe spacing in between lines with lighe-height and justification of the content to get the full width visual.

--- a/santos_portfolio/src/App.css
+++ b/santos_portfolio/src/App.css
@@ -16,7 +16,7 @@ header {
     z-index: 1000;
     font-size:23px;
     font-weight:bold;
-
+    font-family: sans-serif;
 }
 
 nav ul {
